# azure-flask-sandbox

./: README.md
src/backend/: .env.sample  .gitignore  Dockerfile  README.md  appsettings-sample.json  pyproject.toml
src/backend/src/backend/: app.py  app_config.py  gunicorn.conf.py
src/backend/src/backend/templates/: hello.html  index.html
